# Capture_Mouse_Python

./: README.md  advanced_mouse_tracker.py  complete_raw_input.py  demo_advanced_tracker.py  improved_raw_input.py  kivy_touch_data.py  main.py  modern_mouse_tracker.py  modern_mouse_tracker_pl_animation.py  pyproject.toml  rawInput.py  simple_hid_reader.py  tempCodeRunnerFile.py  test.py  test_minimal_advanced.py  test_mouse_tracking.py
